--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
     </div>
+
+    <h1>Changes Done</h1>
  
     <script src="script.js"></script>
  
